--- a/myjokeactivity/src/main/res/values/strings.xml
+++ b/myjokeactivity/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MyJokeActivity</string>
     <string name="action_settings">Settings</string>
     <string name="joke_text">Welcome</string>
+    <string name="title_activity_my_joke">MyJokeActivity</string>
 </resources>
